--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ EMAIL_PASS = testshay
 #
 #this for biocore server smtp
 BIOCORE_ID = biocore@utem.edu.my
+DB_USER = root
+DB_PASS = #@!321Cba
+DB_NAME = emedica
