--- a/.env
+++ b/.env
@@ -4,8 +4,6 @@ EMAIL_PASS = testshay
 #
 #this for biocore server smtp
 BIOCORE_ID = biocore@utem.edu.my
-
-#DB_USER = root
-DB_USER = lim
-DB_PASS = #@!321Cba
-DB_NAME = emedica
+DB_USER = user here
+DB_PASS = password here
+DB_NAME = put your db name here
