--- a/package.json
+++ b/package.json
@@ -5,32 +5,18 @@
   "main": "server.js",
   "scripts": {
     "test": "npm test",
-    "server": "nodemon server.js",
-    "start": "node server.js"
+    "server": "nodemon server.js"
   },
   "author": "MKAG-01",
   "license": "ISC",
   "dependencies": {
-    "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
-    "date-fns": "^2.13.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "generate-password": "^1.5.1",
     "md5": "^2.2.1",
-    "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "node-fetch": "^2.6.0",
-    "nodemailer": "^6.4.8",
-    "nodemon": "^2.0.2",
-    "socket.io": "^2.3.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mkagtech/RnD-JomMedic-Backend.git"
-  },
-  "bugs": {
-    "url": "https://github.com/mkagtech/RnD-JomMedic-Backend/issues"
-  },
-  "homepage": "https://github.com/mkagtech/RnD-JomMedic-Backend#readme"
+    "nodemailer": "^6.4.2",
+    "nodemon": "^2.0.2"
+  }
 }
