--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "generate-password": "^1.5.1",
     "md5": "^2.2.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2"
   }
