provider add get tenant function

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ EMAIL_PASS = testshay
 #
 #this for biocore server smtp
 BIOCORE_ID = biocore@utem.edu.my
-DB_USER = user here
-DB_PASS = password here
-DB_NAME = put your db name here
+DB_USER = root
+DB_PASS = #@!321Cba
+DB_NAME = emedica
