--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ EMAIL_USER = testsenserreset@gmail.com
 EMAIL_PASS = testshay
 #
 #this for biocore server smtp
-BIOCORE_ID = biocore@utem.edu.my
-DB_USER = root
-DB_PASS = #@!321Cba
-DB_NAME = emedica
+BIOCORE_ID = 123
+DB_USER = 123
+DB_PASS = 123
+DB_NAME = 123
