--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #this for dummy gmail email
-EMAIL_USER = testsenserreset@gmail.com
-EMAIL_PASS = testshay
+EMAIL_USER = 123
+EMAIL_PASS = 123
 #
 #this for biocore server smtp
 BIOCORE_ID = 123
